GNOME Bugzilla – Bug 575295
Question-button label mismatch in the closing dialog
Last modified: 2009-06-24 14:56:07 UTC
In the "Close this window?" dialog, the label of the button is "Close Terminal" if there is only one terminal. When there are more than one, the label of the button becomes "Close Window", while the question remains the same. I think the label of the button should corresponds to the question in both cases: Close this window? => Close Window Close this terminal? => Close Terminal
Created attachment 130611 [details] [review] Prints "Close this wIndow?" only if more than one tab would be closed
I don't see the problem here... screen != NULL iff we're closing just one tab (tab close button, or File->Close tab), while it's == NULL if we're closing the whole window. So it would seem to me that the button labels are correct as they are now...
Ok, I see the problem. Patch is fine, please commit to master.