Print "Close this window?" only if more than one tab would be closed

http://bugzilla.gnome.org/show_bug.cgi?id=575295