src/terminal-window.c
@@ -3030,7 +3030,7 @@ confirm_close_window_or_tab (TerminalWindow *window,
                             GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
                             GTK_MESSAGE_WARNING,
                             GTK_BUTTONS_CANCEL,
-                            "%s", screen ? _("Close this terminal?") : _("Close this window?"));
+                            "%s", n_tabs > 1 ? _("Close this window?") : _("Close this terminal?"));
 
   if (n_tabs > 1)
     gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog),
